--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,24 @@
 <resources>
-    <string name="app_name">Channelify</string>
+    <string name="app_name">Yeshivat HaHesder Tsfat</string>
 
     <!-- App Related Info -->
-    <string name="channel_id">UCDECw2OgDesM3Cr-DWxT3HQ</string>
-    <string name="store_url">https://teespring.com/stores/the-engineers-cafe</string>
-    <string name="text_app_desc">Channelify is a native Android app, designed and developed by Aculix Technologies LLP to show the videos from a particular channel.</string>
-    <string name="text_website_url">https://aculix.com/</string>
-    <string name="text_google_play_developer_id">8784124228561333652</string>
-    <string name="text_google_play_developer_name">Aculix Technologies LLP</string>
-    <string name="text_instagram_user_name">aculix</string>
-    <string name="text_contact_email">contact@aculix.com</string>
-    <string name="text_app_feedback_email_subject">Feedback - Channelify</string>
-    <string name="text_tos_url">https://channelify.aculix.com/terms-of-service.html</string>
-    <string name="text_privacy_policy_url">https://channelify.aculix.com/privacy-policy.html</string>
+    <string name="channel_id" translatable="false">UC5DnLKHtfzr7YG7KH7DtFMw</string>
+    <string name="store_url" translatable="false">https://teespring.com/stores/the-engineers-cafe</string>
+    <string name="text_app_desc">Yeshivat HaHesder Tsfat long description.</string>
+    <string name="text_website_url" translatable="false">https://yhtsfat.org.il/</string>
+    <string name="text_google_play_developer_id" translatable="false">8784124228561333652</string>
+    <string name="text_google_play_developer_name" translatable="false">Aculix Technologies LLP</string>
+    <string name="text_instagram_user_name" translatable="false">aculix</string>
+    <string name="text_contact_email" translatable="false">contact@aculix.com</string>
+    <string name="text_app_feedback_email_subject">Feedback - Yeshivat HaHesder Tsfat</string>
+    <string name="text_tos_url" translatable="false">https://yhtsfat.org.il/</string>
+    <string name="text_privacy_policy_url" translatable="false">https://yhtsfat.org.il/</string>
 
     <!-- Admob -->
-    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
-    <string name="main_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="comments_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="comment_replies_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="main_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="comments_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="comment_replies_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
 
     <!-- Text -->
     <string name="text_comments">Comments</string>
@@ -31,10 +31,10 @@
         <item quantity="other">%1$d Videos</item>
     </plurals>
     <string name="text_share_playlist">Share Playlist</string>
-    <string name="text_playlist_share_url">https://www.youtube.com/playlist?list=%1$s</string>
+    <string name="text_playlist_share_url" translatable="false">https://www.youtube.com/playlist?list=%1$s</string>
     <string name="text_share_video">Share Video</string>
-    <string name="text_video_share_url">https://youtu.be/%1$s</string>
-    <string name="text_youtube_channel_intent_url">https://www.youtube.com/channel/%1$s</string>
+    <string name="text_video_share_url" translatable="false">https://youtu.be/%1$s</string>
+    <string name="text_youtube_channel_intent_url" translatable="false">https://www.youtube.com/channel/%1$s</string>
     <string name="text_replies">Replies</string>
     <string name="text_count_unavailable">-</string>
     <string name="text_channel_join_date">Joined %1$s</string>
@@ -42,9 +42,7 @@
     <string name="text_subscribers">Subscribers</string>
     <string name="text_videos">Videos</string>
     <string name="text_views">Views</string>
-    <string name="text_fetch_video_details_wait_msg">Please wait until the video details are fetched</string>
     <string name="text_empty_comments">No comments found on this video</string>
-    <string name="text_empty_playlists">This channel doesn\'t have any playlists</string>
 
     <!-- Button -->
     <string name="btn_retry">Retry</string>
@@ -65,6 +63,7 @@
     <string name="error_search_empty_result_title">No results found</string>
     <string name="error_search_empty_result_desc">Try searching using a different keyword</string>
     <string name="error_channel_info">Error fetching channel info. Please try again.</string>
+    <string name="text_empty_playlists">This channel doesn\'t have any playlists</string>
 
     <!-- Menu -->
     <string name="menu_home">Home</string>
@@ -78,7 +77,7 @@
     <string name="menu_share">Share</string>
     <string name="menu_details">Details</string>
     <string name="menu_search_videos">Search Videos</string>
-    <string name="menu_theme">Change Theme</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_rate_us">Rate app on Google Play</string>
     <string name="menu_feedback">Send us a feedback</string>
     <string name="menu_tos">Terms of Service</string>
@@ -87,11 +86,19 @@
     <!-- Dialog -->
     <string name="dialog_theme_text_light">Light</string>
     <string name="dialog_theme_text_dark">Dark</string>
-    <string name="dialog_theme_title">Choose Theme</string>
+    <string name="dialog_settings_title">Settings</string>
     <string name="menu_store">Store</string>
     <string name="menu_app_info">App Info</string>
 
     <!-- Fragment -->
     <string name="fragment_app_info">App Info</string>
+
+
+    <string name="d_locale_override" translatable="false">locale_override</string>
+
+    <string name="text_fetch_video_details_wait_msg">Please wait while video details are fetched</string>
+    <string name="dialog_negative_button">Cancel</string>
+    <string name="dialog_positive_button">OK</string>
+
 
 </resources>
