--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,16 @@
     <string name="store_url" translatable="false">https://teespring.com/stores/the-engineers-cafe</string>
     <string name="text_app_desc">Yeshivat HaHesder Tsfat long description.</string>
     <string name="text_website_url" translatable="false">https://yhtsfat.org.il/</string>
-    <string name="text_google_play_developer_id" translatable="false">8784124228561333652</string>
-    <string name="text_google_play_developer_name" translatable="false">Aculix Technologies LLP</string>
-    <string name="text_instagram_user_name" translatable="false">aculix</string>
-    <string name="text_contact_email" translatable="false">contact@aculix.com</string>
+    <string name="text_google_play_developer_id" translatable="false">00000000000000000000</string>
+    <string name="text_google_play_developer_name" translatable="false">Yeshivat HaHesder Tsfat</string>
+    <string name="text_contact_email" translatable="false">noam@tsfat.org.il</string>
     <string name="text_app_feedback_email_subject">Feedback - Yeshivat HaHesder Tsfat</string>
     <string name="text_tos_url" translatable="false">https://yhtsfat.org.il/</string>
     <string name="text_privacy_policy_url" translatable="false">https://yhtsfat.org.il/</string>
+
+    <string name="text_facebook_username" translatable="false">itzfat</string>
+    <string name="text_facebook_user_id" translatable="false">431771787016855</string>
+    <string name="text_phone_number" translatable="false">046924646</string>
 
     <!-- Admob -->
     <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
