--- a/music_common/src/main/res/values/strings.xml
+++ b/music_common/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2018 Google Inc. All rights reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -43,4 +42,9 @@
     <!-- Browse Tree -->
     <string name="recommended_title">Recommended</string>
     <string name="albums_title">Albums</string>
+
+    <!-- Google Drive -->
+    <string name="google_drive_link_template" translatable="false">https://www.googleapis.com/drive/v3/files/{ID}?alt=media&amp;key={KEY}</string>
+    <string name="google_drive_folder_template" translatable="false">https://www.googleapis.com/drive/v3/files?q=\'{ID}\'+in+parents&amp;key={KEY}</string>
+
 </resources>
