--- a/music_common/src/main/res/values/strings.xml
+++ b/music_common/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
     <string name="google_drive_query_template" translatable="false">https://www.googleapis.com/drive/v3/files?q=%1$s&amp;fields=files(id,name,mimeType,createdTime,parents)&amp;key=%2$s</string>
     <string name="google_drive_root_id" translatable="false" tools:ignore="TypographyDashes">1-4fu_bw8sOniSJqxqgtUdHlQRdscusFT</string>
     <!--    <string name="google_drive_query_folder">\'{ID}\'+in+parents</string>-->
+
+    <!-- Firebase -->
+    <string name="firebase_catalog_collection" translatable="false">catalog</string>
+    <string name="firebase_catalog_document" translatable="false">audio_catalog</string>
+    <string name="firebase_catalog_lock_document" translatable="false">lock</string>
 </resources>
