--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_feedback">שלח לנו משוב</string>
     <string name="menu_tos">תנאי שימוש</string>
     <string name="menu_privacy_policy">מדיניות פרטיות</string>
+    <string name="menu_source_code">קוד מקור</string>
     <string name="dialog_theme_text_dark">גוונים כהים</string>
     <string name="dialog_settings_title">הגדרות</string>
     <string name="menu_app_info">מידע על האפליקציה</string>
@@ -64,28 +65,25 @@
     <string name="text_update_available_content">יש גרסה חדשה להורדה.</string>
     <string name="text_update_unavailable_content">אין גרסה חדשה להורדה.</string>
     <string name="menu_open_in_youtube">פתח ביוטיוב</string>
-    <string name="channel_description">Media playback notifications</string>
     <string name="skip_back_10s">דלג אחורה 10 ש\'</string>
     <string name="skip_forward_10s">דלג קדימה 10 ש\'</string>
     <string name="play">נגן</string>
     <string name="pause">עצור</string>
-    <string name="menu_music_queue">Queue</string>
-    <string name="album_art_alt">Album art</string>
     <string name="duration_unknown">--:--</string>
     <string name="duration_format">%d:%02d</string>
-    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>
     <string name="menu_audio">אודיו</string>
 
     <plurals name="text_playlist_video_count">
         <item quantity="one">סרטון אחד</item>
         <item quantity="two">שני סרטונים</item>
         <item quantity="many">%1$d סרטונים</item>
-<!--        <item quantity="other">%1$d Videos</item>-->
+        <item quantity="other">%1$d סרטונים</item>
     </plurals>
     <plurals name="text_playlist_audio_count">
         <item quantity="one">שיעור אחד</item>
         <item quantity="two">שני שיעורים</item>
         <item quantity="many">%1$d שיעורים</item>
+        <item quantity="other">%1$d שיעורים</item>
     </plurals>
     <string name="text_share_audio">שתף שיעור</string>
 </resources>
