--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="text_app_feedback_email_subject">Feedback - Yeshivat HaHesder Tsfat</string>
     <string name="text_tos_url" translatable="false">https://yhtsfat.org.il/</string>
     <string name="text_privacy_policy_url" translatable="false">https://yhtsfat.org.il/</string>
+    <string name="text_source_code_url" translatable="false">https://github.com/ElishaAz/YeshivatHahesderTsfat-Android/</string>
 
     <string name="text_facebook_username" translatable="false">itzfat</string>
     <string name="text_facebook_user_id" translatable="false">431771787016855</string>
@@ -85,6 +86,7 @@
     <string name="menu_feedback">Send us a feedback</string>
     <string name="menu_tos">Terms of Service</string>
     <string name="menu_privacy_policy">Privacy Policy</string>
+    <string name="menu_source_code">Source Code</string>
     <string name="menu_check_updae">Check for updates</string>
 
     <!-- Dialog -->
@@ -113,7 +115,7 @@
     <string name="text_update_unavailable_content">There are no new versions available to download.</string>
     <string name="menu_open_in_youtube">Open In Youtube</string>
     <string name="channel_name" translatable="false">Media Playback</string>
-    <string name="channel_description">Media playback notifications</string>
+    <!--    <string name="channel_description">Media playback notifications</string>-->
 
     <!-- UAMP -->
     <string name="skip_back_10s">Skip back 10s</string>
@@ -121,13 +123,9 @@
     <string name="play">Play</string>
     <string name="pause">Pause</string>
 
-    <string name="menu_music_queue">Queue</string>
-    <string name="album_art_alt">Album art</string>
     <string name="duration_unknown">--:--</string>
     <string name="duration_format">%d:%02d</string>
 
     <string name="audio_share_url" translatable="false">https://drive.google.com/file/d/%1$s/view</string>
     <string name="audio_open_url" translatable="false">https://drive.google.com/file/d/%1$s/view</string>
-
-    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>
 </resources>
