--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,8 +77,8 @@
     <string name="menu_top_comments">Top Comments</string>
     <string name="menu_newest_first_comments">Newest First</string>
     <string name="menu_add_to_favorites">Add to favorites</string>
-    <string name="menu_pip">Start PIP mode</string>
-    <string name="menu_open_in_youtube">Open In Youtube</string>
+    <string name="menu_pip">Start \"Picture In Picture\" mode</string>
+    <string name="menu_open_in_youtube">Open in Youtube</string>
     <string name="menu_share">Share</string>
     <string name="menu_details">Details</string>
     <string name="menu_search_videos">Search Videos</string>
